--- a/environment-linux.yaml
+++ b/environment-linux.yaml
@@ -7,7 +7,7 @@ channels:
 dependencies:
   - python=3.10
   - pytorch=2.0.1
-  - pytorch-cuda=11.8
+  - cudatoolkit=11.8
   - torchvision=0.15.2
   - torchaudio=2.0.2
   - pip
